<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:keepScreenOn="true"
    tools:context=".JournalActivity">

    <TextView
        android:id="@+id/textViewNameOfFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/del_journal_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onClickDelJournalBtn"
        android:text="@string/del_journal_btn"
        android:textSize="12sp"

        app:layout_constraintBaseline_toBaselineOf="@+id/add_journal_btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/add_journal_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onClickAddJournalBtn"
        android:scrollbarSize="4dp"
        android:text="@string/add_journal_btn"
        android:textSize="12sp"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintEnd_toStartOf="@+id/del_journal_btn"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameOfFile" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_journal_btn">

        <TextView
            android:id="@+id/ord_header"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ord" />

        <TextView
            android:id="@+id/search_header"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/search" />

        <TextView
            android:id="@+id/mad_header"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/mad" />

        <TextView
            android:id="@+id/index_header"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/index" />

        <TextView
            android:id="@+id/comment_header"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/comment" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/point_recycler_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintBottom_toTopOf="@+id/status_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/status_bar"
        android:layout_width="214dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/indicatorView"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewLastDistance"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/status_bar"
        app:layout_constraintStart_toEndOf="@+id/status_bar" />

    <TextView
        android:id="@+id/textViewTotalDistance"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="right"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/status_bar"
        app:layout_constraintEnd_toStartOf="@+id/indicatorView" />

</androidx.constraintlayout.widget.ConstraintLayout>